Use latest amazonlinux

--- a/python/3.7/Dockerfile
+++ b/python/3.7/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazonlinux:2018.03
+FROM amazonlinux:latest
 
 RUN yum -y groupinstall "Development Tools" && \
     yum -y install git \
@@ -11,11 +11,11 @@ RUN yum -y groupinstall "Development Tools" && \
     postgresql-dev \
     which \
     && yum clean all \
-    && wget https://www.python.org/ftp/python/3.7.6/Python-3.7.6.tgz \
-    && tar xzf Python-3.7.6.tgz \
-    && cd Python-3.7.6 && autoreconf -i && ./configure --enable-optimizations && make altinstall \
+    && wget https://www.python.org/ftp/python/3.7.7/Python-3.7.7.tgz \
+    && tar xzf Python-3.7.7.tgz \
+    && cd Python-3.7.7 && autoreconf -i && ./configure --enable-optimizations && make altinstall \
     && cd .. \
-    && rm Python-3.7.6.tgz \
+    && rm Python-3.7.7.tgz \
     && python3.7 -m pip install --upgrade pip
 
 COPY entrypoint.sh /entrypoint.sh
